--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dist"
   ],
   "scripts": {
+    "dev": "rollup -c --watch",
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,10 +18,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
-    "@rollup/plugin-typescript": "^12.1.2",
+    "@rollup/plugin-typescript": "11.1.6",
     "@types/react": "^19.0.8",
     "rollup": "^4.34.6",
     "rollup-plugin-dts": "^6.1.1",
+    "tslib": "^2.8.1",
     "typescript": "^5.7.3"
   }
 }
