--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.8",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
+    "clsx": "^2.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.2",
@@ -50,6 +52,8 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^8.5.4",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-preset-px-to-rem": "^1.2.1",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3"
   },
