--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "rollup -c",
     "test": "jest --watchAll --verbose",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -42,6 +43,7 @@
     "@types/react": "^19.0.8",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
+    "chromatic": "^11.25.2",
     "clsx": "^2.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
