--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "dev": "rollup -c --watch",
-    "build": "rollup -c",
+    "build": "webpack --config webpack.config.js",
     "test": "jest --watchAll --verbose",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -57,8 +57,11 @@
     "storybook": "^8.5.4",
     "tailwindcss": "^3.4.1",
     "tailwindcss-preset-px-to-rem": "^1.2.1",
+    "ts-loader": "^9.5.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "pearDependencies": {
     "react": "^19.0.0"
