--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.2",
-    "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rollup": "^4.34.6",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "storybook": "^8.5.4",
     "tailwindcss": "^3.4.1",
     "tailwindcss-preset-px-to-rem": "^1.2.1",
