--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
 
     /* Emit */
     "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
-    "emitDeclarationOnly": false /* Only output d.ts files and not JavaScript files. */,
+    "emitDeclarationOnly": true /* Only output d.ts files and not JavaScript files. */,
     "sourceMap": true /* Create source map files for emitted JavaScript files. */,
     "outDir": "dist" /* Specify an output folder for all emitted files. */,
-    "declarationDir": "dist" /* Specify the output directory for generated declaration files. */,
+    "declarationDir": "types" /* Specify the output directory for generated declaration files. */,
 
     /* Interop Constraints */
     "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
@@ -32,9 +32,8 @@
     "noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
     "noUncheckedIndexedAccess": true /* Add 'undefined' to a type when accessed using an index. */,
     "allowUnreachableCode": false /* Disable error reporting for unreachable code. */,
-    "noEmit": false /* Disable emitting files from TypeScript. */,
+
     /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  },
-  "include": ["src/**/*"]
+  }
 }
